Fix the display of the background on small screens
This is not the best solution, but the background feature will certainly change, it was not spec anyway.
Simply having something in the background is good enough for now

Fixes https://github.com/des0ps/react-krdz/issues/1

--- a/src/containers/KanbanBoard.css
+++ b/src/containers/KanbanBoard.css
@@ -11,8 +11,6 @@ div.random-background {
     background-image: url(http://lorempixel.com/1600/1200/technics/);
     background-color: rgba(255, 255, 255, 0.1);
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100%;
     opacity: 0.6;
     filter: alpha(opacity=60);
 }
